--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     uses: deljdlx/github-tools/.github/workflows/deploy.yml@main
     with:
       host_name: "demineur.jlb.ninja"
-      repo_name: "dc-docker-api"
+      repo_name: "dc-demineur"
       repo_owner: "deljdlx"
       deploy_folder: "/home/jdlxt/stack"
     secrets:
