--- a/compose/compose.yaml
+++ b/compose/compose.yaml
@@ -6,7 +6,7 @@ services:
     env_file:
       - .env
     volumes:
-      - "./src:/var/www/html"
+      - "../src:/var/www/html"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.demineur.rule=Host(\"${DOMAIN}\")"
